--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-          registry-url: "git+https://github.com/kattoshi/package-test.git"
+          registry-url: https://github.com/kattoshi/package-test.git
       - run: npm ci
       - run: npm publish
         env:
