--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,5 +1,5 @@
 name: @kattishi github package release test
- 
+
 on:
   release:
     types: [created]
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-          registry-url: https://github.com/kattoshi/package-test.git
+          registry-url: 'https://npm.pkg.github.com'
       - run: npm ci
       - run: npm publish
         env:
